@@ -1,3 +1,8 @@
+2021-09-30  Nick Clifton  <nickc@redhat.com>
+
+	* objcopy.c (filter_symbols): Fail if attempting to dredefine
+	symbols in an LTO object file.
+
 2021-09-27  Nick Alcock  <nick.alcock@oracle.com>
 
 	* configure: Regenerate.
